[B]3.6.1[/B]
- Broaden search results for vipsubs.gr
- Allow subtitle to be saved both locally and within the manual choice
- Ask before overwriting existing subs

[B]3.6.0[/B]
- Allow download of the subtitle next to the playing item (for locally saved videos)
- Extract zips upon save
- Fix for saved files
- Improve results for locally saved files
- Some bug fixes (xsubs.tv)

[B]3.5.1[/B]
- Logging tweaks on vipsubs
- Force unicode search strings
- Make futures optional to help installation for certain cases (Kodi 19)
- Reduce number of concurrent threads (max 5)

[B]3.5.0[/B]
- Change caching method
- Kodi 19+ related fixes
- Remove prompt for libarchive installation
- Increased cache durations for the given functions
- Improve performance with futures instead of arbitrary ranges on workers

[B]3.4.0 - 3.4.1[/B]
- Code related tweaks, particularly how routing is handled
- Added ability to save subtitles and/or zips from sources

[B]3.3.1[/B]
- Added the forgotten string

[B]3.3.0[/B]
- Improved search query function, added accompanying option

[B]3.2.5[/B]
- Tweaked imports

[B]3.2.4[/B]
- More bug fixes for vipsubs.gr (failure to load nested zip on Android)
- Removed builtin methods from other provides

[B]3.2.3[/B]
- Bug fixes for vipsubs.gr

[B]3.2.2[/B]
- Do not allow random choice when not necessary

[B]3.2.1[/B]
- Added capability for nested zips on vipsubs.gr
- Skip certain results not containing subtitles on vipsubs.gr

[B]3.2.0[/B]
- Bumped dependencies
- Improved cache clear function
- Added vipsubs.gr
- Lots of bug fixes

[B]3.1.X[/B]
- Tweaked regexes for searches
- Added a setting allowing users to set search and download timeouts
- Added visual feedback when deleting function cache
- Disabled subs4free.info

[B]3.0.X[/B]
- Removed subzxyz (subtitles were moved to opensubtitles.org)
- Bypassed subtitles.gr/findsubtitles.eu domain completely and removed its setting
- Added support for subs4free/subs4series, podnapisi